--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://sagarpal04.github.io/cart-react",
+  "homepage": "https://sagarpal04.github.io/Fast-React-Pizza-Co",
   "name": "pizza-menu",
   "version": "0.1.0",
   "private": true,
